[gd_scene load_steps=3 format=2]

[ext_resource path="res://Panel.gd" type="Script" id=1]
[ext_resource path="res://Label.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -17.0
margin_top = -12.0
margin_right = 1278.0
margin_bottom = 780.0

[node name="Panel" type="Panel" parent="."]
margin_top = -1.50732
margin_right = 1264.0
margin_bottom = 769.493
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = 300.0
margin_right = 367.0
margin_bottom = 333.0
rect_scale = Vector2( 4, 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
text = "Fucking new engine to learn."
align = 1
valign = 1
uppercase = true
script = ExtResource( 2 )
[connection signal="mouse_entered" from="Panel" to="Label" method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="Label" method="_on_Panel_mouse_exited"]
[connection signal="mouse_entered" from="Label" to="Label" method="_on_Label_mouse_entered"]
[connection signal="mouse_exited" from="Label" to="Label" method="_on_Label_mouse_exited"]
